--- a/redux-store/src/App.css
+++ b/redux-store/src/App.css
@@ -1,38 +1,294 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --white: #fff;
+  --black: #000;
+  --main: #ea8685;
+  --grey: #596275;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.container {
+  width: 1300px;
+  margin: 0 auto;
+}
+
+.nav {
+  width: 100%;
+  height: 70px;
+  box-shadow: 0 5px 20px 2px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  background-color: var(--white);
+  z-index: 1;
+}
+
+.nav_container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  justify-content: space-between;
+}
+
+.nav_left img {
+  width: 100px;
+}
+
+.header {
+  background-image: url("./images/bannerImage.jpg");
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  align-items: center;
+  margin-top: 5%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.cart-icon {
+  color: var(--main);
+  font-size: 22px;
+}
+
+.basket {
+  position: relative;
+}
+
+.basket span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: -15px;
+  top: -10px;
+  width: 25px;
+  height: 25px;
+  background: #596275;
+  border-radius: 50%;
+  color: var(--white);
+  font-size: 12px;
+}
+
+.mtb-30 {
+  margin: 30px auto;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.col-2 {
+  width: 16.4%;
+}
+
+.col-3 {
+  width: 25%;
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.col-9 {
+  width: 75%;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.product {
+  padding: 25px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.product_img {
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+
+.product_img img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s linear;
+}
+
+.product_img img:hover {
+  transform: scale(1.2);
+}
+
+.product_name {
+  margin: 10px 0;
+  text-transform: capitalize;
+  color: #2f3640;
+}
+
+.product_discount_price {
+  text-align: right;
+  font-size: 18px;
+}
+
+.product_price .discount {
+  color: silver;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.actualPrice {
+  text-decoration: line-through;
+  font-size: 18px;
+}
+
+.details_image {
+  width: 100%;
+  height: auto;
+  padding-right: 30px;
+}
+
+.details_image img {
+  width: 75%;
+  height: auto;
+  margin-bottom: 25px;
+}
+
+.details_name {
+  font-size: 28px;
+  color: #2d3436;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+.details_price {
+  margin: 10px 0;
+}
+
+.details_actual {
+  text-decoration: line-through;
+  font-size: 20px;
+}
+
+.details_discount {
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.details_incDec {
+  display: flex;
+}
+
+.dec,
+.inc,
+.quantity {
+  width: 60px;
+  height: 60px;
+  border: 1px solid #636e72;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quantity {
+  border-left: none;
+  border-right: none;
+}
+
+.inc,
+.dec {
+  cursor: pointer;
+}
+
+.btn-default {
+  margin-left: 10px;
+  width: 100%;
+  border: none;
+  background: var(--main);
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.details_p {
+  margin-top: 15px;
+}
+
+.details_p h4 {
+  font-weight: 600;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.cart {
+  margin-top: 100px;
+}
+
+.cart h3 {
+  font-weight: 400;
+}
+
+.cart_heading {
+  background: #b2bec3;
+  padding: 10px;
+}
+
+.cart_image img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
+
+.verticalAlign {
+  align-items: center;
+  margin-top: 10px;
+}
+
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@media (max-width: 765px) {
+  .container {
+    width: 100%;
+    padding: 0 30px;
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .col-3 {
+    width: 50%;
+  }
+
+  .col-6 {
+    width: 100%;
+  }
+
+  .details_image {
+    padding-right: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 400px) {
+  .col-3 {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .col-6 {
+    width: 100%;
+  }
+
+  .details_image {
+    padding-right: 0;
   }
 }
